--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&family=Montserrat&family=Rock+Salt&display=swap');
 body {
   padding: 0;
   margin: 0;
-  font-family: Lato;
+  font-family: Montserrat;
   font-size: 20px;
 }
 
@@ -24,11 +24,22 @@ body {
 #game-intro h1 {
   margin: 150px 0 50px 0;
   color: #41ad36;
+  font-family: 'Rock Salt', cursive;
 }
 
 #game-intro p {
   max-width: 800px;
   margin: 10px 0;
+}
+
+#audio-button {
+  background: transparent;
+  border: transparent;
+}
+
+#audio-button img{
+  width: 70px;
+  background: transparent;
 }
 
 #game-container {
@@ -45,6 +56,7 @@ body {
   display: flex;
   width: 1200px;
   margin-top: 20px;
+  padding-left: 160px;
 
 }
 
@@ -52,7 +64,8 @@ body {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  width: 400px;
+  width: 300px;
+  margin-right: 50px;
 }
 
 #lives-container img {
@@ -63,7 +76,7 @@ body {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  width: 400px;
+  width: 300px;
 }
 
 #score-container img {
@@ -140,7 +153,7 @@ body {
   }
 }
 
-@-webkit-keyframes breath {
+@keyframes breath {
   0% {
     -webkit-transform: scale(0.9);
     transform: scale(0.9);
@@ -159,7 +172,7 @@ body {
   }
 }
 
-@-webkit-keyframes jump {
+@keyframes jump {
   0%{
     -webkit-transform: translateY(0);
     transform: translateY(0);
@@ -193,13 +206,17 @@ body {
 #game-end h1 {
   margin: 150px 0 50px 0;
   color: #41ad36;
+  font-family: 'Rock Salt', cursive;
 }
 
 #game-end p {
   max-width: 800px;
-  margin: 10px 0;
 }
 
+#game-end ul {
+  list-style: none;
+  padding: 0 0;
+}
 .logo-img {
   width: 250px;
   animation: jump 2s ease infinite
