--- a/styles/style.css
+++ b/styles/style.css
@@ -25,9 +25,7 @@ body {
 
 #game-intro h1 {
   margin: 80px 0 50px 0;
-  /*color: #41ad36;*/
   color: #131313;
-  /*font-family: 'Rock Salt', cursive;*/
   font-family: 'Amatic SC', cursive;
   font-size: 3em;
 }
@@ -37,27 +35,12 @@ body {
   margin: 10px 0;
 }
 
-#audio-button {
-  background: transparent;
-  border: transparent;
-}
-
-#audio-button img{
-  width: 70px;
-  background: transparent;
-}
-
-
-
-
-
-
 #input-popup {
   display: none;
   position: absolute;
   top: 230px;
   width: 400px;
-  height: 280px;
+  height: 340px;
   background-color: #41ad36;
   border: 16px solid #6cc744
 }
@@ -90,18 +73,35 @@ body {
 }
 
 #input-button-container button {
-  margin-top: 15px;
+  margin-top: 40px;
   width: 150px;
   height: 50px;
   background-color: #6cc744;
   font-family: 'Amatic SC', cursive;
   font-size: 1.1em;
   font-weight: 700;
+  border-radius: 15px;
+  border: 2px solid black;
 }
 
+.audio-button {
+  margin: 15px 0 10px 0;
+  padding: 0;
+  width: 150px;
+  height: 50px;
+  background-color: #6cc744;
+  color: black;
+  font-family: 'Amatic SC', cursive;
+  font-size: 1.1em;
+  font-weight: 700;
+  border: 0px solid black;
+  border-radius: 15px;
+}
 
-
-
+.audio-button-on {
+  border: 4px solid black;
+  
+}
 
 
 
@@ -308,10 +308,6 @@ body {
   border: 0;
   box-shadow: 0;
   border-radius: 20px;
-  margin: 40px 0;
-}
-
-#restart-button {
   margin: 20px 0;
 }
 
